# rust-sixtysix

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FUNDING.md  Makefile  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
docs/: api.md  integration.md  rules.md
examples/: server.rs
src/: engine.rs  game.rs  lib.rs
src/api/: mod.rs  server.rs
src/store/: memory.rs  mod.rs
